# investor-tracker

./: .gitignore  SERVER-README.txt  pyproject.toml  requirements.txt  run.bat  run_bot.bat  run_web.bat  start-server-background.vbs  start-server.bat  stop-server.bat
config/: settings.yaml
data/: investor_tracker.db
investor_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: main.py
src/analyzers/: changes.py  crypto_recommender.py  korean_recommender.py  overlap.py  pension_recommender.py  us_recommender.py
src/bot/: telegram_bot.py
src/notifications/: alerts.py
src/scrapers/: crypto.py  dataroma.py  korean_stocks.py  pension_etf.py
src/storage/: database.py
src/web/: dashboard.py
